@@ -1,3 +1,6 @@
+1798.	[func]		The server syntax has been extended to support a
+			range of servers.  [RT #11132]
+
 1797.	[func]		named-checkconf now check acls to verify that they
 			only refer to existing acls. [RT #13101]
 
